<resources>
    <string name="app_name">redmineAndroid</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_forgot_pass_word">ForgotPassWordActivity</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="desc">your desc goes here</string>
    <string name="desc_logo">Logo here</string>
    <string name="hint_address">Enter your Address</string>
    <string name="hint_usename">Enter your username</string>
    <string name="hint_password">Enter your password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot your password, Click here !!!</string>

    <string name="issue_description">Description</string>
    <string name="issue_status">Status</string>
    <string name="issue_assigned">Assignee</string>
    <string name="issue_priority">Priority</string>
    <string name="issue_done_ratio">% Done</string>
    <string name="issue_start_date">Start Date</string>
    <string name="issue_due_date">Due Date</string>
    <string name="issue_version">Target Version</string>
    <string name="issue_category">Category</string>
    <string name="issue_estimated_hours">Estimate time</string>
    <string name="issue_parent">Parent task</string>
    <string name="issue_detail_attach_button">Attachments</string>
    <string name="tracker">Tracker</string>
    <string name="bug">Bug</string>
    <string name="meo">meo</string>


</resources>
