<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    android:background="@drawable/another_background"
    tools:context=".activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical|center_horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">

        <ImageView android:src="@drawable/voz3"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:contentDescription="@string/desc_logo"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textUri"
                android:textColor="#ffffffff"
                android:fontFamily="sans-serif-light"
                android:hint="@string/hint_address" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:fontFamily="sans-serif-light"
                android:textColor="#ffffffff"
                android:hint="@string/hint_usename" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:fontFamily="sans-serif-light"
                android:textColor="#ffffffff"
                android:hint="@string/hint_password" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/loginButton"
                    android:onClick="clickButtonLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    android:text="@string/login"
                    android:textColor="#ffffffff"
                    android:background="#ff7e51c2"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

                <Button
                    android:id="@+id/registerButton"
                    android:onClick="clickButtonRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    android:text="@string/register"
                    android:textColor="#ffffffff"
                    android:background="#ff7e51c2"
                    android:textSize="18sp"
                    android:textStyle="bold"/>
            </LinearLayout>

            <TextView android:id="@+id/forgotPassWord"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="40dp"
                android:text="@string/forgot_password"
                android:gravity="center"
                android:textColor="#ffffffff"
                android:textSize="16sp"

                android:autoLink="web" />
        </LinearLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>